--- a/src/modules/phase02-enable/07/_content.html
+++ b/src/modules/phase02-enable/07/_content.html
@@ -1,6 +1,6 @@
 <div class="section-overview">
 	<div class="table-responsive">
-		<table class="table table-hover">
+		<table class="table table-bordered">
 			<thead>
 				<th colspan="2">
 					Oracle SaaS Implementation Enablement for EMEA Partners
@@ -13,8 +13,8 @@
 						<p>These enablement events come from different sources within Oracle, thus have different prerequisites and fees. Oracle recommends that Partners plan their participation months ahead and for a relevant number of participants in order to secure seats in forthcoming events.</p>
 						<p>Participants are advised to sit the relevant Certified Implementation Specialist Exam, a crucial part for the Specialization. after the Implementation Event. However, it is also recommended for participants to gain implementation experience prior to sitting the CIS Exam.</p>
 					</td>
-					<td>
-						<table>
+					<td class="table-container">
+						<table class="table table-bordered table-condensed">
 							<tbody>
 								<tr>
 									<td colspan="2">
@@ -43,6 +43,14 @@
 									</td>
 									<td width="234">
 										<p><span style="text-decoration: underline;"><a href="mailto:natalia.brovarnik@oracle.com">natalia.brovarnik@oracle.com</a></span></p>
+									</td>
+								</tr>
+								<tr>
+									<td width="158">
+										<p><strong>Central Asia: </strong></p>
+									</td>
+									<td width="234">
+										<p><span style="text-decoration: underline;"><a href="mailto:selma.levent@oracle.com">selma.levent@oracle.com</a></span></p>
 									</td>
 								</tr>
 								<tr>
