--- a/src/modules/phase02-enable/07/_table.html
+++ b/src/modules/phase02-enable/07/_table.html
@@ -29,7 +29,7 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
-				<td>Exam not available</td>
+				<td><a class="not-available">Exam not available</a></td>
 				<td>Free</td>
 			</tr>
 			<tr>
@@ -43,7 +43,7 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
-				<td>Exam not available</td>
+				<td><a class="not-available">Exam not available</a></td>
 				<td>See Invitation</td>
 			</tr>
 			<tr>
@@ -69,7 +69,7 @@
 				<td>&nbsp;</td>
 				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank">Register</a></td>
 				<td>&nbsp;</td>
-				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank">Available</a></td>
+				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank" class="available">Available</a></td>
 				<td>&nbsp;</td>
 				<td><a href="https://community.oracle.com/community/technology_network_community/emea-partner-sales/pact/saas/enable/sit-implementation-exams" target="_blank">Sit CIS Exam</a></td>
 				<td>Free</td>
@@ -85,7 +85,7 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
-				<td>Exam not available</td>
+				<td><a class="not-available">Exam not available</a></td>
 				<td>Free</td>
 			</tr>
 			<tr>
@@ -127,7 +127,7 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
-				<td>Exam not available</td>
+				<td><a class="not-available">Exam not available</a></td>
 				<td>Free</td>
 			</tr>
 			<tr>
@@ -141,7 +141,7 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
-				<td>Exam not available</td>
+				<td><a class="not-available">Exam not available</a></td>
 				<td>Free</td>
 			</tr>
 			<tr>
@@ -154,7 +154,7 @@
 				<td><a href="https://www.oracle.com/search/events" target="_blank">Register</a></td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
-				<td><a href="http://ilearning.oracle.com/ilearn/en/learner/jsp/offering_details_home.jsp?classid=1816094609" target="_blank">Available</a></td>
+				<td><a href="http://ilearning.oracle.com/ilearn/en/learner/jsp/offering_details_home.jsp?classid=1816094609" target="_blank" class="available">Available</a></td>
 				<td><a href="https://community.oracle.com/community/technology_network_community/emea-partner-sales/pact/saas/enable/sit-implementation-exams" target="_blank">Sit CIS Exam</a></td>
 				<td>Free</td>
 			</tr>
@@ -197,7 +197,7 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
-				<td>Exam not available</td>
+				<td><a class="not-available">Exam not available</a></td>
 				<td>See Invitation</td>
 			</tr>
 			<tr>
@@ -222,9 +222,9 @@
 				<td><a href="http://www.oracle.com/partners/campaign/eblasts/cloud-implementation-training-2492001.html" target="_blank">Global Workshop Schedule</a></td>
 				<td><a href="https://go.oracle.com/LP=10054?elqCampaignId=19402" target="_blank">Needed to register for this event</a></td>
 				<td><a href="https://eventreg.oracle.com/profile/form/index.cfm?PKformID=0x4612612b569" target="_blank">Register</a></td>
-				<td><a href="https://eventreg.oracle.com/profile/web/index.cfm?PKwebID=0x2895993d3d" target="_blank">Available</a></td>
-				<td><a href="http://www.oracle.com/partners/campaign/eblasts/training-on-demand-workshops-3253409.html" target="_blank">Available</a></td>
-				<td><a href="http://ilearning.oracle.com/ilearn/en/learner/jsp/offering_details_home.jsp?classid=1771934728" target="_blank">Available</a></td>
+				<td><a href="https://eventreg.oracle.com/profile/web/index.cfm?PKwebID=0x2895993d3d" target="_blank" class="available">Available</a></td>
+				<td><a href="http://www.oracle.com/partners/campaign/eblasts/training-on-demand-workshops-3253409.html" target="_blank" class="available">Available</a></td>
+				<td><a href="http://ilearning.oracle.com/ilearn/en/learner/jsp/offering_details_home.jsp?classid=1771934728" target="_blank" class="available">Available</a></td>
 				<td><a href="https://community.oracle.com/community/technology_network_community/emea-partner-sales/pact/saas/enable/sit-implementation-exams" target="_blank">Sit CIS Exam</a></td>
 				<td>Free</td>
 			</tr>
@@ -237,7 +237,7 @@
 				<td>&nbsp;</td>
 				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank">Register</a></td>
 				<td>&nbsp;</td>
-				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank">Available</a></td>
+				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank" class="available">Available</a></td>
 				<td>&nbsp;</td>
 				<td><a href="https://community.oracle.com/community/technology_network_community/emea-partner-sales/pact/saas/enable/sit-implementation-exams" target="_blank">Sit CIS Exam</a></td>
 				<td>Free</td>
@@ -265,7 +265,7 @@
 				<td><a href="https://go.oracle.com/LP=10054?elqCampaignId=19402" target="_blank">Needed to register for this event</a></td>
 				<td><a href="https://eventreg.oracle.com/profile/form/index.cfm?PKformID=0x4612612b569" target="_blank">Register</a></td>
 				<td>&nbsp;</td>
-				<td>&nbsp;</td>
+				<td><a href="http://www.oracle.com/partners/campaign/eblasts/training-on-demand-workshops-3253409.html" target="_blank" class="available">Available</a></td>
 				<td>&nbsp;</td>
 				<td><a href="https://community.oracle.com/community/technology_network_community/emea-partner-sales/pact/saas/enable/sit-implementation-exams" target="_blank">Sit CIS Exam</a></td>
 				<td>Free</td>
@@ -292,8 +292,8 @@
 				<td><a href="http://www.oracle.com/partners/campaign/eblasts/cloud-implementation-training-2492001.html" target="_blank">Global Workshop Schedule</a></td>
 				<td><a href="https://go.oracle.com/LP=10054?elqCampaignId=19402" target="_blank">Needed to register for this event</a></td>
 				<td><a href="https://eventreg.oracle.com/profile/form/index.cfm?PKformID=0x4612612b569" target="_blank">Register</a></td>
-				<td><a href="https://eventreg.oracle.com/profile/form/index.cfm?PKformID=0x35769411c2b" target="_blank">Available</a></td>
-				<td><a href="http://www.oracle.com/partners/campaign/eblasts/training-on-demand-workshops-3253409.html" target="_blank">Available</a></td>
+				<td><a href="https://eventreg.oracle.com/profile/form/index.cfm?PKformID=0x35769411c2b" target="_blank" class="available">Available</a></td>
+				<td><a href="http://www.oracle.com/partners/campaign/eblasts/training-on-demand-workshops-3253409.html" target="_blank" class="available">Available</a></td>
 				<td>&nbsp;</td>
 				<td><a href="https://community.oracle.com/community/technology_network_community/emea-partner-sales/pact/saas/enable/sit-implementation-exams" target="_blank">Sit CIS Exam</a></td>
 				<td>Free</td>
@@ -335,7 +335,7 @@
 				<td><a href="https://go.oracle.com/LP=10054?elqCampaignId=19402" target="_blank">Needed to register for this event</a></td>
 				<td><a href="https://eventreg.oracle.com/profile/form/index.cfm?PKformID=0x4612612b569" target="_blank">Register</a></td>
 				<td>&nbsp;</td>
-				<td><a href="http://www.oracle.com/partners/campaign/eblasts/training-on-demand-workshops-3253409.html" target="_blank">Available</a></td>
+				<td><a href="http://www.oracle.com/partners/campaign/eblasts/training-on-demand-workshops-3253409.html" target="_blank" class="available">Available</a></td>
 				<td>&nbsp;</td>
 				<td><a href="https://community.oracle.com/community/technology_network_community/emea-partner-sales/pact/saas/enable/sit-implementation-exams" target="_blank">Sit CIS Exam</a></td>
 				<td>Free</td>
@@ -390,8 +390,8 @@
 				<td><a href="http://www.oracle.com/partners/campaign/eblasts/cloud-implementation-training-2492001.html" target="_blank">Global Workshop Schedule</a></td>
 				<td><a href="https://go.oracle.com/LP=10054?elqCampaignId=19402" target="_blank">Needed to register for this event</a></td>
 				<td><a href="https://eventreg.oracle.com/profile/form/index.cfm?PKformID=0x4612612b569" target="_blank">Register</a></td>
-				<td><a href="https://eventreg.oracle.com/profile/web/index.cfm?PKwebID=0x2629042dc8" target="_blank">Available</a></td>
-				<td><a href="http://www.oracle.com/partners/campaign/eblasts/training-on-demand-workshops-3253409.html" target="_blank">Available</a></td>
+				<td><a href="https://eventreg.oracle.com/profile/web/index.cfm?PKwebID=0x2629042dc8" target="_blank" class="available">Available</a></td>
+				<td><a href="http://www.oracle.com/partners/campaign/eblasts/training-on-demand-workshops-3253409.html" target="_blank" class="available">Available</a></td>
 				<td>&nbsp;</td>
 				<td><a href="https://community.oracle.com/community/technology_network_community/emea-partner-sales/pact/saas/enable/sit-implementation-exams" target="_blank">Sit CIS Exam</a></td>
 				<td>Free</td>
@@ -419,7 +419,7 @@
 				<td>&nbsp;</td>
 				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank">Register</a></td>
 				<td>&nbsp;</td>
-				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank">Available</a></td>
+				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank" class="available">Available</a></td>
 				<td>&nbsp;</td>
 				<td><a href="https://community.oracle.com/community/technology_network_community/emea-partner-sales/pact/saas/enable/sit-implementation-exams" target="_blank">Sit CIS Exam</a></td>
 				<td>Free</td>
@@ -433,7 +433,7 @@
 				<td>&nbsp;</td>
 				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank">Register</a></td>
 				<td>&nbsp;</td>
-				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank">Available</a></td>
+				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank" class="available">Available</a></td>
 				<td>&nbsp;</td>
 				<td><a href="https://community.oracle.com/community/technology_network_community/emea-partner-sales/pact/saas/enable/sit-implementation-exams" target="_blank">Sit CIS Exam</a></td>
 				<td>Free</td>
@@ -447,7 +447,7 @@
 				<td><a href="https://go.oracle.com/LP=10054?elqCampaignId=19402" target="_blank">Needed to register for this event</a></td>
 				<td><a href="https://eventreg.oracle.com/profile/form/index.cfm?PKformID=0x4612612b569" target="_blank">Register</a></td>
 				<td>&nbsp;</td>
-				<td>&nbsp;</td>
+				<td><a href="http://www.oracle.com/partners/campaign/eblasts/training-on-demand-workshops-3253409.html" target="_blank" class="available">Available</a></td>
 				<td>&nbsp;</td>
 				<td><a href="https://community.oracle.com/community/technology_network_community/emea-partner-sales/pact/saas/enable/sit-implementation-exams" target="_blank">Sit CIS Exam</a></td>
 				<td>Free</td>
@@ -506,6 +506,20 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td><a href="https://community.oracle.com/community/technology_network_community/emea-partner-sales/pact/saas/enable/sit-implementation-exams" target="_blank">Sit CIS Exam</a></td>
+				<td>Free</td>
+			</tr>
+			<tr>
+				<td>PaaS/SaaS</td>
+				<td>PaaS for SaaS</td>
+				<td>2</td>
+				<td>InClass</td>
+				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank">EMEA Enablement Calendar</a></td>
+				<td>&nbsp;</td>
+				<td><a href="https://apex.oracle.com/pls/apex/f?p=EXTERNAL_CALENDAR:2:116434304636572:::::" target="_blank">Register</a></td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
 				<td>Free</td>
 			</tr>
 			<tr>
