--- a/src/modules/phase02-enable/09/_table.html
+++ b/src/modules/phase02-enable/09/_table.html
@@ -23,26 +23,31 @@
 				<td colspan="4"><a>2. Have you received your Confirmation Email</a></td>
 				<td colspan="4">Contact your Country Contact as appropriate (see table on this page)</td>
 				<td>CEE:&nbsp;</td>
-				<td colspan="2"><a href="mailto:adam.krynski@oracle.com">adam.krynski@oracle.com&nbsp;</a></td>
+				<td colspan="2"><a href="mailto:adam.krynski@oracle.com">adam.krynski@oracle.com</a></td>
 			</tr>
 
 			<tr>
-				<td colspan="4">3. Have you done the required prerequisite training?</td>
-				<td colspan="4">Review Requirements</td>
+				<td colspan="4" rowspan="2">3. Have you done the required prerequisite training?</td>
+				<td colspan="4" rowspan="2">Review Requirements</td>
 				<td>CIS:&nbsp;</td>
 				<td colspan="2"><a href="mailto:natalia.brovarnik@oracle.com">natalia.brovarnik@oracle.com</a></td>
+			</tr>
+
+			<tr>
+				<td>Central Asia:</td>
+				<td colspan="2"><a href="mailto:selma.levent@oracle.com">selma.levent@oracle.com</a></td>
 			</tr>
 
 			<tr>
 				<td colspan="4" rowspan="2">4. Does your PC and Infrastructure have the correct Spec?</td>
 				<td colspan="4" rowspan="2">Verify Sys Requirements for your Product</td>
 				<td>Denmark:</td>
-				<td colspan="2"><a href="mailto:corry.weick@oracle.com">corry.weick@oracle.com&nbsp;</a></td>
+				<td colspan="2"><a href="mailto:corry.weick@oracle.com">corry.weick@oracle.com</a></td>
 			</tr>
 
 			<tr>
 				<td>Finland:</td>
-				<td colspan="2"><a href="mailto:corry.weick@oracle.com">corry.weick@oracle.com&nbsp;</a></td>
+				<td colspan="2"><a href="mailto:markku.rouhiainen@oracle.com">markku.rouhiainen@oracle.com</a></td>
 			</tr>
 
 			<tr>
@@ -54,12 +59,12 @@
 
 			<tr>
 				<td>Germany</td>
-				<td colspan="2"><a href="mailto:corry.weick@oracle.com">corry.weick@oracle.com&nbsp;</a></td>
+				<td colspan="2"><a href="mailto:corry.weick@oracle.com">corry.weick@oracle.com</a></td>
 			</tr>
 
 			<tr>
 				<td>Switzerland:</td>
-				<td colspan="2"><a href="mailto:alan.blakely@oracle.com">alan.blakely@oracle.com&nbsp;</a></td>
+				<td colspan="2"><a href="mailto:alan.blakely@oracle.com">alan.blakely@oracle.com</a></td>
 			</tr>
 
 			<tr>
@@ -86,7 +91,7 @@
 				<td colspan="4" style="background:#ececec; text-align:center;"><strong>Advanced Implementation Bootcamp</strong></td>
 				<td colspan="4" style="background:#ececec; text-align:center;"><strong>Vouchers</strong></td>
 				<td>Norway:&nbsp;</td>
-				<td colspan="2"><a href="mailto:alan.blakely@oracle.com">alan.blakely@oracle.com&nbsp;</a></td>
+				<td colspan="2"><a href="mailto:alan.blakely@oracle.com">alan.blakely@oracle.com</a></td>
 			</tr>
 
 			<tr>
@@ -94,27 +99,27 @@
 				<td colspan="4" rowspan="5">&nbsp;</td>
 				<td colspan="4" rowspan="5">&nbsp;</td>
 				<td>Sweden:&nbsp;</td>
-				<td colspan="2"><a href="mailto:alan.blakely@oracle.com">alan.blakely@oracle.com&nbsp;</a></td>
+				<td colspan="2"><a href="mailto:alan.blakely@oracle.com">alan.blakely@oracle.com</a></td>
 			</tr>
 
 			<tr>
 				<td>Portugal:&nbsp;</td>
-				<td colspan="2"><a href="mailto:markku.rouhiainen@oracle.com">markku.rouhiainen@oracle.com&nbsp;</a></td>
+				<td colspan="2"><a href="mailto:markku.rouhiainen@oracle.com">markku.rouhiainen@oracle.com</a></td>
 			</tr>
 
 			<tr>
 				<td>Spain:&nbsp;</td>
-				<td colspan="2"><a href="mailto:markku.rouhiainen@oracle.com">markku.rouhiainen@oracle.com&nbsp;</a></td>
+				<td colspan="2"><a href="mailto:markku.rouhiainen@oracle.com">markku.rouhiainen@oracle.com</a></td>
 			</tr>
 
 			<tr>
 				<td>Turkey:&nbsp;</td>
-				<td colspan="2"><a href="mailto:selma.levent@oracle.com">selma.levent@oracle.com&nbsp;</a></td>
+				<td colspan="2"><a href="mailto:selma.levent@oracle.com">selma.levent@oracle.com</a></td>
 			</tr>
 
 			<tr>
 				<td>UK:&nbsp;</td>
-				<td colspan="2"><a href="mailto:kate.lynskey@oracle.com">kate.lynskey@oracle.com&nbsp;</a></td>
+				<td colspan="2"><a href="mailto:kate.lynskey@oracle.com">kate.lynskey@oracle.com</a></td>
 			</tr>
 
 			<tr>
@@ -145,7 +150,7 @@
 				<td width="85" style="border:none; background:#fff">&nbsp;</td>
 				<td width="103" style="border:none; background:#fff">&nbsp;</td>
 				<td width="103" style="border:none; background:#fff">&nbsp;</td>
-				<td width="133">EMEA</td>
+				<td width="133">EMEA SaaS Enablement Leader</td>
 				<td colspan="2"><a href="mailto:kenneth.wood@oracle.com">kenneth.wood@oracle.com</a></td>
 			</tr>
 			<tr>
@@ -177,7 +182,7 @@
 				<td width="103" style="border:none; background:#fff">&nbsp;</td>
 				<td width="103" style="border:none; background:#fff">&nbsp;</td>
 				<td>EMEA</td>
-				<td colspan="2"><a href="mailto:markku.rouhiainen@oracle.com">markku.rouhiainen@oracle.com&nbsp;</a></td>
+				<td colspan="2"><a href="mailto:markku.rouhiainen@oracle.com">markku.rouhiainen@oracle.com</a></td>
 			</tr>
 			<tr>
 				<td width="66" style="border:none; background:#fff">&nbsp;</td>
