--- a/src/modules/phase02-enable/12/_table.html
+++ b/src/modules/phase02-enable/12/_table.html
@@ -1,19 +1,19 @@
 <div class="table-responsive">
 	
-	<table class="table table bordered">
+	<table class="table table-bordered">
 		<thead>
 			<tr>
-				<th style="vertical-align: middle;text-align:center;" colspan="7" class="table-header"><strong>Cloud Methodology Workshop - Oracle Unified Method (OUM)</strong></th>
-				<th rowspan="8" style="vertical-align:top;"><img src="https://community.oracle.com/resources/statics/6070452/14.png?a=1475246642562"/></th>
+				<th style="vertical-align: middle;text-align:center;" colspan="8" class="table-header"><strong>Cloud Methodology Workshop - Oracle Unified Method (OUM)</strong></th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
-					<td colspan="7"><span style="max-width:700px;">As a benefit of membership, partners (gold and above) can download the extensive OUM collateral &mdash; adopt the entire methodology or weave any of the collateral into your own methodology!<br/><br/>
-						OUM is a proven methodology based on decades of implementations, best practices and success!<br/><br/>
-						The OUM Cloud Application Services Team is defining a standard approach within the OUM Framework for implementing all Oracle Branded Applications running on Cloud Infrastructure.<br/><br/>
-						Starting from OUM 5.5 through various releases till the current version of OUM the following products have been added Fusion, Taleo and Rightnow, further products to be added.</span>
-					</td>
+				<td colspan="6"><span style="max-width:700px;">As a benefit of membership, partners (gold and above) can download the extensive OUM collateral &mdash; adopt the entire methodology or weave any of the collateral into your own methodology!<br/><br/>
+					OUM is a proven methodology based on decades of implementations, best practices and success!<br/><br/>
+					The OUM Cloud Application Services Team is defining a standard approach within the OUM Framework for implementing all Oracle Branded Applications running on Cloud Infrastructure.<br/><br/>
+					Starting from OUM 5.5 through various releases till the current version of OUM the following products have been added Fusion, Taleo and Rightnow, further products to be added.</span>
+				</td>
+				<td rowspan="7" style="vertical-align:top;"><img src="https://community.oracle.com/resources/statics/6070452/14.png?a=1475246642562"/></td>
 			</tr>
 			<tr style="background:#ececec; font-weight:bold;">
 				<td style="vertical-align: middle;text-align:center;">OUM Knowledge Zone</td>
@@ -33,7 +33,7 @@
 			<tr>
 				<td colspan="3" style="text-align:center; vertical-align:middle;"><a href="http://education.oracle.com/pls/web_prod-plq-dad/db_pages.getpage?page_id=5001&get_params=p_exam_id:1Z0-633" target="_blank">NEW Certified implementation Specialist in BETA</a>
 				<br><br>
-				Try Beta test in the time until June 10th 2017
+				Try Beta test in the time until August 5th 2017
 				<br><br>
 				<a href="https://eventreg.oracle.com/profile/form/index.cfm?PKformID=0x408596b399" target="_blank"> We offer vouchers for the Beta test </a></td>
 			</tr>
