--- a/src/page-phase2-step07.tpl.html
+++ b/src/page-phase2-step07.tpl.html
@@ -29,6 +29,9 @@
 		"nav-step11": "",
 		"nav-step12": "",
 		"nav-step13": "",
+		"nav-step14": "",
+		"nav-step15": "",
+		"nav-step17": "",
 		"nav-phase03": "",
 		"nav-phase03-collapsed": "",
 		"nav-phase04": "",
