--- a/src/page-phase2.tpl.html
+++ b/src/page-phase2.tpl.html
@@ -1,4 +1,6 @@
-@@include('modules/_header.html')
+@@include('modules/_header.html', {
+	"body-class": "page-phase"
+})
 
 	<!--[if lt IE 8]>
 		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -51,8 +53,8 @@
 						<li>09. Attend Workshops and Bootcamps</li>
 						<li>10. Request Access to Demo Platform</li>
 						<li>11. Cloud Consulting Workshop</li>
-						<li>12. Cloud Methodology Workshop</li>
-						<li>13. SaaS Impl.Best Practices</li>
+						<li>12. Cloud Methodology Workshop - Oracle Unified Method (OUM)</li>
+						<li>13. SaaS Implementation Best Practices Training</li>
 					</ul>
 				</div>
 				<!-- /.phase-plan -->
@@ -73,19 +75,16 @@
 				<div class="phase-plan col-md-6 col-lg-6 col-xl-5">
 					<h4 class="phase-steps-title">Saas Implementation best practices</h4>
 					<ul class="phase-steps list-unstyled">
-						<li>16. Oracle Cloud Implementation Success & Training On Demand</li>
-						<li>17. Oracle Cloud Implementation Success & My Oracle Support</li>
-						<li>18. Oracle Cloud Implementation Success & Useful Sites</li>
+						<li>14. Oracle Cloud Implementation Success &amp; My Oracle Support</li>
+						<li>15. Oracle Cloud Implementation Success &amp; Useful Sites</li>
 					</ul>
 				</div>
 				<!-- /.phase-plan -->
 
-				<div class="phase-plan col-md-6 col-lg-6 col-xl-5">
+				<div class="phase-plan col-md-6 col-lg-4 col-xl-4">
 					<h4 class="phase-steps-title">Packaged solutions/FSO Build</h4>
 					<ul class="phase-steps list-unstyled">
-						<li>19. Build a first version of Packaged Solution / FSO</li>
-						<li>20. Review and update the Packaged Solution / FSO</li>
-						<li>21. Agree on a final version of Packaged Solution / FSO</li>
+						<li>16. Build, review and agree on a first version of Packaged Solution / FSO</li>
 					</ul>
 				</div>
 				<!-- /.phase-plan -->
@@ -93,7 +92,7 @@
 				<div class="phase-plan phase-review col-md-4 col-lg-2 col-xl-2">
 					<h4 class="phase-steps-title">Exams</h4>
 					<ul class="phase-steps list-unstyled">
-						<li>22. Sit Implementation Exams</li>
+						<li>17. Sit Implementation Exams</li>
 					</ul>
 				</div>
 				<!-- /.phase-plan -->
@@ -122,7 +121,7 @@
 			<ul class="coaches list-unstyled row">
 				<li class="coach col-md-4">
 					<a href="#">
-						<img src="https://community.oracle.com/resources/statics/5954567/Untitled-1_0012_Kate%2BLynskey.jpg?a=1476373925549" alt="Corry Weick" class="coach-img">
+						<img src="https://community.oracle.com/resources/statics/5954567/Untitled-1_0012_Kate%2BLynskey.jpg?a=1476373925549" alt="Kate Lynskey" class="coach-img">
 						<div class="coach-info">
 							<span class="coach-name">Kate Lynskey</span>
 							<span class="coach-title">Enablement Coach - On-Boarding</span>
@@ -131,7 +130,7 @@
 				</li>
 				<li class="coach col-md-4">
 					<a href="#">
-						<img src="https://community.oracle.com/resources/statics/6070439/Deborah.jpg?a=1476728659523" alt="Corry Weick" class="coach-img">
+						<img src="https://community.oracle.com/resources/statics/6070439/Deborah.jpg?a=1476728659523" alt="Deborah Korb" class="coach-img">
 						<div class="coach-info">
 							<span class="coach-name">Deborah Korb</span>
 							<span class="coach-title">Cloud Business Coach - Processes</span>
@@ -140,7 +139,7 @@
 				</li>
 				<li class="coach col-md-4">
 					<a href="#">
-						<img src="https://community.oracle.com/resources/statics/5954567/HENRY-Legg.jpg?a=1476882373870" alt="Corry Weick" class="coach-img">
+						<img src="https://community.oracle.com/resources/statics/5954567/HENRY-Legg.jpg?a=1476882373870" alt="Henry Legg" class="coach-img">
 						<div class="coach-info">
 							<span class="coach-name">Henry Legg</span>
 							<span class="coach-title">Cloud Business Coach</span>
