--- a/src/modules/phase01-activate/02/_introduction.html
+++ b/src/modules/phase01-activate/02/_introduction.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-md-8 page-intro-presentation">
+	<div class="col-md-8 page-intro-presentation hidden">
 		<h4 class="page-intro-title">
 			<span class="pull-left">Introduction &amp; Overview</span>
 			<small class="pull-right page-intro-download"><a href="#"><i class="icon fa fa-download"></i> Download PPT</a></small>
@@ -7,10 +7,10 @@
 		<img src="https://community.oracle.com/resources/statics/5954567/page2.png?a=1476375493177" alt="Intro image" class="img-responsive">
 	</div>
 	<!-- /.col-md-8 -->
-	<div class="col-md-4">
+	<div class="col-md-12">
 		<h4 class="page-intro-title">Virtual coaches <i class="icon icon-help fa fa-question-circle" data-toggle="tooltip" data-placement="top" title="We are your virtual coaches, please click through to our profiles and connect with us, so we can discuss how we might be able to assist you."></i></h4>
-		<ul class="coaches list-unstyled">
-			<li class="coach">
+		<ul class="coaches list-unstyled row">
+			<li class="coach col-md-6 col-lg-3">
 				<a href="#">
 					<img src="https://community.oracle.com/resources/statics/5954567/Kate%2BLynskey.jpg?a=1476264543554" alt="Kate Lynskey" class="coach-img">
 					<div class="coach-info">
@@ -19,7 +19,7 @@
 					</div>
 				</a>
 			</li>
-			<li class="coach">
+			<li class="coach col-md-6 col-lg-3">
 				<a href="#">
 					<img src="https://community.oracle.com/resources/statics/5954567/Untitled-1_0013_Corry.jpg?a=1476373929114" alt="Corry Weick" class="coach-img">
 					<div class="coach-info">
