--- a/src/page-phase1.tpl.html
+++ b/src/page-phase1.tpl.html
@@ -1,4 +1,6 @@
-@@include('modules/_header.html')
+@@include('modules/_header.html', {
+	"body-class": "page-phase"
+})
 
 	<!--[if lt IE 8]>
 		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
