--- a/src/page-phase2-step11.tpl.html
+++ b/src/page-phase2-step11.tpl.html
@@ -13,14 +13,14 @@
 		"nav-phase04": ""
 	})
 	@@include('modules/_nav.html', {
-		"nav-phase01": "active",
+		"nav-phase01": "",
 		"nav-phase01-collapsed": "",
 		"nav-step02": "",
 		"nav-step03": "",
 		"nav-step04": "",
 		"nav-step05": "",
 		"nav-step06": "",
-		"nav-phase02": "",
+		"nav-phase02": "active",
 		"nav-phase02-collapsed": "in",
 		"nav-step07": "",
 		"nav-step08": "",
@@ -29,6 +29,9 @@
 		"nav-step11": "active",
 		"nav-step12": "",
 		"nav-step13": "",
+		"nav-step14": "",
+		"nav-step15": "",
+		"nav-step17": "",
 		"nav-phase03": "",
 		"nav-phase03-collapsed": "",
 		"nav-phase04": "",
@@ -50,7 +53,7 @@
 
 		<section class="page-content">
 			<header class="section-header">
-				<p class="lead section-title">Implementation Enablement</p>
+				<p class="lead section-title">Cloud Consulting Workshop</p>
 			</header>
 				
 			@@include('modules/phase02-enable/11/_content.html')
